Version 1.6 - 2015-12-23
* Allow to configure which fiscal years are exported

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Allow to use move date as a parameter
* Improve description
* Add aggregate posting option on a journal
* Add aggregate option on journal

Version 1.2 - 2014-07-01
* Changelog file creation